@@ -1,3 +1,9 @@
+2019-09-28  Paul Thomas  <pault@gcc.gnu.org>
+
+	Backport from mainline
+	PR fortran/91588
+	* gfortran.dg/associate_49.f90 : New test.
+
 2019-09-25  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
 
 	Backport from mainline
